# middleware/router.go
@@ -2,12 +2,13 @@ package middleware
 
 import (
 	_ "conforme/docs"
-	sector "conforme/internal/Sector/handler"
+	test "conforme/internal/test/handler"
+
+	"conforme/db"
 
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	"conforme/db"
 )
 
 // @title
@@ -37,8 +38,10 @@ func SetupRouter() *gin.Engine {
 
 	// Routes without authentication
 	r.GET("/token", generateTokenHandler)
-	r.POST("/create-painels-test", sector.CreatePainelTest)
-	r.GET("/all-find-painel", sector.SearchAllTestPainel)
+	r.POST("/create-painels-test", test.CreatePainelTest)
+	r.GET("/all-find-painel", test.SearchAllTestPainel)
+	r.POST("/pdf-test", test.CreatePdfTest)
+	r.GET("/all-find-pdfs", test.SearchAllTestPdfs)
 
 	// Authenticated routes
 	auth := r.Group("/api")
